[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yaconfiglib"
version = "0.9.8"
authors = [{ name = "Jose A" }]
description = "Another Config lib for python, basically load config/yaml/toml/... files and add some features like relative import and templating."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "pathlib-next"
]

[project.optional-dependencies]
toml = ["toml"]
yaml = ["pyyaml"]
transform = ["yaconfiglib[jinja2]"]
jinja2 = ["jinja2"]
dev = ["pytest", "build", "hatchling", "twine"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[project.urls]
Homepage = "https://github.com/jose-pr/yaconfiglib/"
Documentation = "https://jose-pr.github.io/yaconfiglib/"
Issues = "https://github.com/jose-pr/yaconfiglib/issues"

[tool.hatch.build.targets.sdist]
exclude = ["/.*"]

[tool.hatch.build.targets.wheel]
packages = ["src/yaconfiglib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

